infra/manifests/policies/require-signed-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-image
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-image
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/carhartl/*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/carhartl/k8s-playground/.github/workflows/pipeline.yml@refs/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    additionalExtensions:
                      githubWorkflowTrigger: push
                      githubWorkflowName: pipeline.yml
                      githubWorkflowRepository: carhartl/k8s-playground
                    rekor:
                      url: https://rekor.sigstore.dev
